--- a/main.css
+++ b/main.css
@@ -220,7 +220,7 @@ footer .bottom-logo img {
   max-width: 50px;
 }
 
-footer ul {
+footer ul.list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -357,14 +357,14 @@ footer .social svg:hover {
   footer {
     padding: 4rem;
   }
-  footer ul {
+  footer ul.list {
     text-align: center;
   }
 
-  footer div:nth-child(2) {
+  footer ul:nth-child(2) {
     margin-top: -2rem;
   }
-  footer div:nth-child(3) {
+  footer ul:nth-child(3) {
     margin-top: -2rem;
     margin-bottom: 5rem;
   }
